# Specter

./: .gitignore  README.md  pyproject.toml
data/: faces.npz
src/specter/: cuda.py  main.py
src/specter/avatar/: renderer.py
src/specter/tracking/: camera.py  face.py  hands.py  models.py  pose.py  recognition.py
src/specter/ui/: main_window.py  viewport.py
